portfolio-website/src/styles/Skills.css
.skills {
  /* background: linear-gradient(90deg, #6a11cb, #2575fc); */
  backdrop-filter: blur(10px);
  /* background-color: #f8f9fa; */
  text-align: center;
  padding: 2rem;
  border-radius: 15px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(255, 255, 255, 0.3);
}

.skills h2 {
  font-size: 2.5rem;
  margin-bottom: 2rem;
  animation: fadeIn 1s ease-in-out;
}

.skills-icons {
  display: flex;
  justify-content: center;
  gap: 3rem;
  padding: 0px 0px 0px 20px;
  animation: slideIn 1s ease-in-out;
}

.icon {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 3rem;
  color: #333;
  background: rgba(255, 255, 255, 0.2);
  border-radius: 10px;
  padding: 1rem;
  backdrop-filter: blur(5px);
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease-in-out;
}

.icon:hover {
  transform: scale(1.1);
}

.icon p {
  margin-top: 0.5rem;
  font-size: 1rem;
  color: #666;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes slideIn {
  from {
    transform: translateY(20px);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

